--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <title>Shower Presentation Engine</title>
+    <title>VSC и Метрика | Продуктовый дизайнер</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
@@ -9,13 +9,17 @@
         .shower {
             --slide-ratio: calc(16 / 9);
         }
+        .caption a {
+            font-size: 1rem;
+        }
     </style>
 </head>
 <body class="shower list">
 
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
+        <h1>VSC и Метрика</h1>
+        <p>Вебинар для продуктовых дизайнеров</p>
+        <p><a href="cats/">Доска почёта</a></p>
     </header>
 
     <section class="slide" id="cover">
