--- a/index.html
+++ b/index.html
@@ -1,208 +1,204 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>VSC и Метрика | Продуктовый дизайнер</title>
+    <title>GitHub и Метрика | Продуктовый дизайнер</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
     <style>
         .shower {
+            --color-blue: #3073E8;
             --slide-ratio: calc(16 / 9);
         }
-        .caption a {
+        .caption p:last-child {
+            margin-top: 1em;
             font-size: 1rem;
+        }
+        .slide::after {
+            background-image: url('pictures/ribbon.svg');
+        }
+        li {
+            line-height: 1.2;
+            margin-bottom: .5em;
         }
     </style>
 </head>
 <body class="shower list">
 
     <header class="caption">
-        <h1>VSC и Метрика</h1>
+        <h1>GitHub и Метрика</h1>
         <p>Вебинар для продуктовых дизайнеров</p>
-        <p><a href="cats/">Доска почёта</a></p>
+        <p><a href="cats/">Доска почёта</a> • <a href="task/">Задание</a></p>
     </header>
 
     <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="https://pepelsbey.net">Vadim Makeev</a></p>
+        <h2>GitHub и Метрика</h2>
+        <p>Михаил Воробьев, разработчик интерфейсов Практикума</p>
+        <ol>
+            <li>Макет vs. реальность</li>
+            <li>Системы контроля версий</li>
+            <li>Метрика</li>
+            <li>Q&A</li>
+        </ol>
+        <i>P.S. Котов считать не нужно</i>
         <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="https://fiftyfootshadows.net">© John Carey</a>
+            <img class="place right" src="pictures/cover.jpg" alt="Фотография Михаила Воробьева">
+            <figcaption class="copyright right">
+                <a href="https://dontliem1.github.io" target="_blank">Контакты</a>
             </figcaption>
         </figure>
         <style>
             #cover h2 {
-                margin: 30px 0 0;
-                color: white;
-                text-align: center;
-                font-size: 70px;
+                font-size: 250%;
+                margin-bottom: .25em;
+                color: var(--color-blue);
             }
-
             #cover p {
-                margin: 10px 0 0;
-                text-align: center;
-                color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
-
-            #cover p a {
-                color: white;
+                max-width: 50%;
+                line-height: 1.4;
             }
         </style>
     </section>
 
-    <section class="slide">
-        <h2>Shower key features</h2>
-        <ol>
-            <li>Built on HTML, CSS and JavaScript</li>
-            <li>Works in all modern browsers</li>
-            <li>Themes are separated from engine</li>
-            <li>Fully keyboard accessible</li>
-            <li>Printable to PDF</li>
-        </ol>
-        <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Plain text on your slides</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Two columns if you like</h2>
-        <div class="columns two">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-        </div>
-    </section>
-
-    <section class="slide">
-        <h2>All kind of lists</h2>
-        <ol>
-            <li>Simple lists are marked with bullets</li>
-            <li>Ordered lists begin with a number</li>
-            <li>You can even nest lists one inside another
+    <section class="slide" id="design">
+        <h2>Мои заметки для дизайнера</h2>
+        <div class="columns three">
+            <div>
+                <h3>Адаптивность</h3>
                 <ul>
-                    <li>Or mix their types</li>
-                    <li>But do not go too far</li>
-                    <li>Otherwise audience will be bored</li>
+                    <li>Мобильные версии сайтов верстайте в размере 320px</li>
+                    <li>Для элементов, которые тянутся по ширине, продумайте поведение (ограничение) на разных экранах</li>
+                    <li>В неочевидных местах указывайте: элемент фиксирован в размерах или зависит от ширины/высоты экрана; какие минимальные/максимальные размеры?</li>
                 </ul>
-            </li>
-            <li>Look, seven rows exactly!</li>
-        </ol>
-    </section>
-
-    <section class="slide">
-        <h2>Serious citations</h2>
-        <figure>
-            <blockquote>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </blockquote>
-            <figcaption>Marcus Tullius Cicero</figcaption>
-        </figure>
-    </section>
-
-    <section class="slide">
-        <h2>Code samples</h2>
-        <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
-        </pre>
-    </section>
-
-    <section class="slide">
-        <h2>Even tables</h2>
-        <table>
-        <tr>
-            <th scope="col">Locavore</th>
-            <th>Umami</th>
-            <th>Helvetica</th>
-            <th>Vegan</th>
-        </tr>
-        <tr>
-            <th scope="row">Fingerstache</th>
-            <td>Kale</td>
-            <td>Chips</td>
-            <td>Keytar</td>
-        </tr>
-        <tr>
-            <th scope="row">Sriracha</th>
-            <td>Gluten-free</td>
-            <td>Ennui</td>
-            <td>Keffiyeh</td>
-        </tr>
-        <tr>
-            <th scope="row">Thundercats</th>
-            <td>Jean</td>
-            <td>Shorts</td>
-            <td>Biodiesel</td>
-        </tr>
-        <tr>
-            <th scope="row">Terry</th>
-            <td>Richardson</td>
-            <td>Swag</td>
-            <td>Blog</td>
-        </tr>
-        </table>
-        <p>It’s good to have information organized.</p>
-    </section>
-
-    <section class="slide" id="picture">
-        <h2>Pictures</h2>
-        <figure>
-            <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-            <figcaption class="copyright right white">
-                <a href="https://fiftyfootshadows.net">© John Carey</a>
-            </figcaption>
-        </figure>
+                <h3>Переполнение</h3>
+                <ul>
+                    <li>Константин Константинопольский</li>
+                    <li>В вебе есть переносы</li>
+                    <li>Если мы нарисовали ряд карточек, и предполагается, что их может быть больше/меньше: как они себя будут вести?</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Текст</h3>
+                <ul>
+                    <li>Заведите текстовые стили и старайтесь не отступать от них.</li>
+                    <li>Как должны выглядеть ссылки в тексте?</li>
+                    <li>Шрифт в инпутах менее 16px</li>
+                </ul>
+                <h3>Цвета</h3>
+                <ul>
+                    <li>Проверяйте контрастность.</li>
+                    <li>Заведите палитру цветов и старайтесь не отступать от неё.</li>
+                    <li>Для удобства создания ховеров и состояний можно использовать HSL.</li>
+                    <li>Не используйте прозрачность, если в этом нет необходимости — пишите конечный цвет.</li>
+                    <li>В какой цвет красить шапку браузера?</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Интерактивность</h3>
+                <ul>
+                    <li>Если нужно, продумайте состояния ховеров.</li>
+                    <li>Если нужно сделать горизонтальную/вертикальную прокрутку элемента, решите прячем ли мы скроллбар, оформляем ли его по своему, или оставляем стандартный.</li>
+                </ul>
+                <h3>Картинки</h3>
+                <ul>
+                    <li>Фавиконка для сайта — svg или png до 512х512. Можно отдельно для светлой и темной темы.</li>
+                    <li>Обложка для шеринга в соцсетях 1280×640</li>
+                </ul>
+            </div>
+        </div>
         <style>
-            #picture h2 {
-                color: white;
+            #design h3 {
+                margin: 0;
+            }
+            #design .columns {
+                font-size: .75rem;
             }
         </style>
     </section>
 
-    <section class="slide">
-        <h2 class="shout shrink">You can even shout this way</h2>
+    <section class="slide" id="vcs">
+        <h2>Системы контроля версий</h2>
+        <p class="note"><a href="https://doka.guide/tools/version-control/" target="_blank">VCS</a> — Version Control Systems</p>
+        <p>Придуманы, чтобы следить за историей изменений исходного кода и комфортно работать большой командой. Самая популярная — Git.</p>
+        <p><a href="https://github.com" target="_blank">GitHub</a> • <a href="https://code.visualstudio.com" target="_blank">VS Code</a> • <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a></p>
     </section>
 
-    <section class="slide">
-        <h2>Inner navigation</h2>
-        <ol>
-            <li>Lets you reveal list items one by one</li>
-            <li class="next">To keep some key points</li>
-            <li class="next">In secret from audience</li>
-            <li class="next">But it will work only once</li>
-            <li class="next">Nobody wants to see the same joke twice</li>
-        </ol>
+    <section class="slide" id="repository">
+        <h2>Репозиторий</h2>
+        <p class="note">Repository — хранилище исходного кода с историей изменений</p>
+        <ul>
+            <li><b>Локальный (Local)</b> — размещенный на компьютере разработчика</li>
+            <li><b>Удаленный (Remote)</b> — размещенный на GitHub</li>
+        </ul>
+        <p><code>git init</code> — создать (инициализировать) репозиторий</p>
+        <p><code>git clone ОТКУДА КУДА</code> — скопировать (клонировать) репозиторий на компьютер</p>
     </section>
 
-    <section class="slide" id="see-more">
-        <h2 class="shout">
-            <img src="pictures/logo.svg" alt="Shower logo">
-            <a href="https://github.com/shower/shower">See more on GitHub</a>
-        </h2>
+    <section class="slide" id="commit">
+        <h2>Коммит</h2>
+        <p class="note">Commit — подписанная пачка изменений исходного кода</p>
+        <p><code>git add ПАПКИ/ФАЙЛЫ</code> — добавить измененённые файлы в следующий коммит (застейджить). Застейджить всё: <code>git add --all</code></p>
+        <p><code>git commit -m "СООБЩЕНИЕ"</code> — создать коммит (закоммитить)</p>
+        <p><code>git revert КОММИТ</code> — отменить коммит (ревертнуть)</p>
+    </section>
+
+    <section class="slide" id="ci-cd">
+        <h2>Работа с удаленным репозиторием</h2>
+        <p><code>git push</code> — отправить коммиты (запушить)</p>
+        <p><code>git pull</code> — подтянуть коммиты (спуллить)</p>
+        <p><b>Continuous Integration/Continuous Delivery <a href="https://doka.guide/tools/ci-cd/" target="_blank">(CI/CD)</a></b> — подход к разработке, при котором задачи сборки, публикации, тестирования продукта полностью или частично автоматизированы.</p>
+    </section>
+
+    <section class="slide" id="branches">
+        <h2>Ветки</h2>
+        <div class="columns two">
+            <div>
+                <p class="note">Branch — параллельная история изменений</p>
+                <img src="https://wac-cdn.atlassian.com/dam/jcr:c6db91c1-1343-4d45-8c93-bdba910b9506/02%20Branch-1%20kopiera.png?cdnVersion=418" width="100" alt="Иллюстрация слияния">
+            </div>
+            <div>
+                <p><code>git checkout -b ВЕТКА</code> — создать ветку</p>
+                <p><code>git switch ВЕТКА</code> — переключиться на ветку</p>
+                <p><code>git merge ВЕТКА</code> — влить (смёржить) ветку в текущую</p>
+            </div>
+        </div>
         <style>
-            #see-more h2 {
-                font-size: 100px
+            #branches .note {
+                margin-bottom: 0;
             }
-
-            #see-more img {
-                width: 0.72em;
-                height: 0.72em;
+            #branches img {
+                width: 120%;
+                margin-left: -13%;
+                vertical-align: middle;
             }
         </style>
+    </section>
+
+    <section class="slide" id="github-flow">
+        <h2>Возможности веток <a href="https://docs.github.com/en/get-started/quickstart/github-flow" target="_blank">(GitHub flow)</a></h2>
+        <ul>
+            <li>Параллельно работать над новой сложной функциональностью, привязывая ветку к задаче (карточка в Trello, тикет в менеджере задач, Issue на гитхабе)</li>
+            <li>Переиспользовать чужие коммиты</li>
+            <li>Выделить «продуктовую» ветку, и релизиться только при её изменении</li>
+            <li>Опубликовать тестовую версию сайта и проверить функциональность</li>
+            <li>Создать <b>Pull Request</b> (запрос на слияние веток) и провести <b>Code Review</b> (проверку чужого кода перед слиянием)</li>
+        </ul>
+        <a href="task/">Задание</a>
+    </section>
+
+    <section class="slide" id="metrika">
+        <h2><a href="https://metrika.yandex.ru/" target="_blank">Метрика</a></h2>
+        <p>Инструмент для оценки посещаемости сайтов и анализа поведения пользователей.</p>
+        <p>Можно проверять, добавив к адресу сайта <code>?_ym_debug=1</code> и заглянув в консоль браузера <code>F12</code>/<code>Cmd+Shift+I</code></p>
+        <a href="cats/?_ym_debug=1" target="_blank">Котики</a> • <a href="https://metrika.yandex.ru/dashboard?id=89410210" target="_blank">Счётчик котиков</a>
+    </section>
+
+    <section class="slide">
+        <h2 class="shout shrink">Вопросы</h2>
     </section>
 
     <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
+        <a href="https://github.com/dontliem1/product-designer-webinar">Fork me on GitHub</a>
     </footer>
 
     <div class="progress"></div>
