--- a/src/cats.html
+++ b/src/cats.html
@@ -57,6 +57,11 @@
         }
         a {
             color: inherit;
+            display: inline-block;
+            margin-bottom: .5em;
+        }
+        footer a:not(:last-child) {
+            margin-right: 1em;
         }
     </style>
 </head>
@@ -67,6 +72,7 @@
 <main>
 <ul>
     {%- for student in collections.students -%}
+    {% unless student.fileSlug == 'example' %}
     <li>
         <button
             aria-label="Проголосовать"
@@ -76,33 +82,25 @@
         ></button>
         {{ student.templateContent }}
     </li>
+    {% endunless %}
     {%- endfor -%}
 </ul>
 </main>
-<footer><a href="../">Сайт воркшопа</a></footer>
-<script>
-    function handleClick(e) {
-        alert('Спасибо! Ваш голос учтен.');
-        ym(89410210,'reachGoal', e.target.id)
-    }
+<footer>
+    <a href="../">Сайт воркшопа</a>
+</footer>
+<!-- Yandex.Metrika informer --> <a href="https://metrika.yandex.ru/stat/?id=89410210&amp;from=informer" target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/89410210/3_0_3073E8FF_3073E8FF_1_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="89410210" data-lang="ru" /></a> <!-- /Yandex.Metrika informer --> <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(89410210, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+ <script>
+     function handleClick(e) {
+         alert('Спасибо! Ваш голос учтен.');
+         ym(89410210,'reachGoal', e.target.id)
+     }
 
-    const btns = document.getElementsByTagName('button');
+     const btns = document.getElementsByTagName('button');
 
-    for (const btn of btns) {
-        btn.addEventListener('click', handleClick);
-    }
-</script>
-<script>
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-    ym(89410210, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true
-    });
+     for (const btn of btns) {
+         btn.addEventListener('click', handleClick);
+     }
  </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 </html>
