--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header class="caption">
         <h1>GitHub и Метрика</h1>
-        <p>Вебинар для продуктовых дизайнеров</p>
+        <p>Воркшоп для продуктовых дизайнеров</p>
         <p><a href="cats/">Доска почёта</a> • <a href="task/">Задание</a></p>
     </header>
 
