--- a/src/task.html
+++ b/src/task.html
@@ -20,47 +20,98 @@
             margin-bottom: .5em;
         }
         code {
-            background-color: lightgray;
-            color: darkred;
+            background-color: rgb(51, 122, 198);
+            color: #fff;
             display: inline-block;
             padding: 0.25em;
             border-radius: .25em;
         }
         img {
-            vertical-align: middle;
+            vertical-align: top;
             max-width: 100%;
             height: auto;
+            margin: .5em;
         }
         figure {
             margin: 0;
+        }
+        figure + figure {
+            margin-top: 1em;
         }
         figcaption {
             margin-bottom: .5em;
         }
         li {
-            margin-bottom: 1.5em;
+            margin-bottom: 2em;
         }
     </style>
 </head>
 <body>
 <header>
-<h1>Задание на воркшоп</h1>
+<h1>Задание на воркшоп</h1>
 </header>
 <main>
 <ol>
     <li>
         <figure>
-            <figcaption>Перейти в <a href="https://github.com/dontliem1/product-designer-webinar" target="_blank">репозиторий воркшопа</a></figcaption>
+            <figcaption>Перейдите в <a href="https://github.com/dontliem1/product-designer-webinar" target="_blank">репозиторий воркшопа</a></figcaption>
             <img src="../pictures/task/repo.png" width="900" alt="">
         </figure>
     </li>
     <li>
         <figure>
-            <figcaption>Нажать на точку <code>.</code> на клавиатуре, чтобы вызвать веб-версию VS Code</figcaption>
+            <figcaption>Нажмите на точку <code>.</code> на клавиатуре, чтобы вызвать веб-версию VS Code, и дождитесь окончания загрузки</figcaption>
             <img src="../pictures/task/webeditor.png" width="900" alt="">
         </figure>
     </li>
-    <li>Нажать на точку <code>.</code> на клавиатуре, чтобы вызвать веб-версию VS Code</li>
+    <li>
+        <figure>
+            <figcaption>В левом нижнем углу нажмите на <code>main</code> и создайте новую ветку <code>Create new branch</code>, написав по-английски свою фамилию/ник и переключитесь на неё <code>Switch to branch</code></figcaption>
+            <img src="../pictures/task/branch1.png" width="300" alt="">
+            <img src="../pictures/task/branch2.png" width="300" alt="">
+            <img src="../pictures/task/branch3.png" width="600" alt="">
+            <img src="../pictures/task/branch4.png" width="400" alt="">
+        </figure>
+        <figure>
+            <figcaption>Убедитесь, что в левом нижнем углу теперь отображается ваша ветка</figcaption>
+            <img src="../pictures/task/branch5.png" width="300" alt="">
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <figcaption>В дереве файлов слева создайте копию файла <code>example.md</code> в папке <code>src/students</code>, нажав на нём правой кнопкой мыши, и выбрав <code>Copy</code>, а затем нажав правой кнопкой на папке <code>students</code> и выбрав <code>Paste</code></figcaption>
+            <img src="../pictures/task/copy.png" width="450" alt="">
+            <img src="../pictures/task/paste.png" width="450" alt="">
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <figcaption>Переименуйте получившийся файл также как ветку, нажав на нём правой кнопкой мыши и выбрав <code>Rename</code></figcaption>
+            <img src="../pictures/task/rename1.png" width="450" alt="">
+            <img src="../pictures/task/rename2.png" width="300" alt="">
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <figcaption>Замените содержимое файла, введя своё имя/ник</figcaption>
+            <img src="../pictures/task/content.png" width="450" alt="">
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <figcaption>На вкладке слева <code>Source Control</code> наведите курсор на наш новый файл и нажмите на появившийся <code>+</code> справа. Введите в поле <code>Message</code> сверху сообщение для коммита и нажмите на галочку <code>✓</code></figcaption>
+            <img src="../pictures/task/stage.png" width="450" alt="">
+            <img src="../pictures/task/commit.png" width="450" alt="">
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <figcaption>Нажмите на кнопку <code>Create pull request</code>(вторая после заголовка <code>Source Control</code>). В открывшейся вкладке пролистайте вниз и нажмите <code>Create</code>. Напишите в чат воркшопа «Готово»!</figcaption>
+            <img src="../pictures/task/pr1.png" width="600" alt=""><br>
+            <img src="../pictures/task/pr2.png" width="250" alt="">
+            <img src="../pictures/task/pr3.png" width="900" alt="">
+        </figure>
+    </li>
 </ol>
 </main>
 <footer>
