--- a/src/task.html
+++ b/src/task.html
@@ -106,12 +106,13 @@
     </li>
     <li>
         <figure>
-            <figcaption>Нажмите на кнопку <code>Create pull request</code>(вторая после заголовка <code>Source Control</code>). В открывшейся вкладке пролистайте вниз и нажмите <code>Create</code>. Напишите в чат воркшопа «Готово»!</figcaption>
+            <figcaption>Нажмите на кнопку <code>Create pull request</code>(вторая после заголовка <code>Source Control</code>). В открывшейся вкладке пролистайте вниз и нажмите <code>Create</code>.</figcaption>
             <img src="../pictures/task/pr1.png" width="600" alt=""><br>
             <img src="../pictures/task/pr2.png" width="250" alt="">
             <img src="../pictures/task/pr3.png" width="900" alt="">
         </figure>
     </li>
+    <li>Напишите в чат воркшопа «Готово»!</li>
 </ol>
 </main>
 <footer>
