--- a/src/cats.html
+++ b/src/cats.html
@@ -41,6 +41,10 @@
             padding: 0;
             width: 10em;
         }
+        .winner {
+            width: 15em;
+            height: 15em;
+        }
         button::after {
             content: attr(aria-label);
             background: rgba(0, 0, 0, .75);
@@ -79,6 +83,7 @@
             id="{{ student.fileSlug }}"
             style="background-image: url('{{ student.data.img }}');"
             type="button"
+            {% if student.fileSlug == '' %}class="winner"{% endif %}
         ></button>
         {{ student.templateContent }}
     </li>
