Fix caching and informer

--- a/src/cats.html
+++ b/src/cats.html
@@ -64,9 +64,6 @@
             display: inline-block;
             margin-bottom: .5em;
         }
-        footer a:not(:last-child) {
-            margin-right: 1em;
-        }
     </style>
 </head>
 <body>
@@ -92,9 +89,24 @@
 </ul>
 </main>
 <footer>
-    <a href="../">Сайт воркшопа</a>
+    <a href="../">Сайт воркшопа</a> •
+    <a href="https://metrika.yandex.ru/dashboard?id=89410210" target="_blank">Метрика ↗</a>
 </footer>
-<!-- Yandex.Metrika informer --> <a href="https://metrika.yandex.ru/stat/?id=89410210&amp;from=informer" target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/89410210/3_0_3073E8FF_3073E8FF_1_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="89410210" data-lang="ru" /></a> <!-- /Yandex.Metrika informer --> <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(89410210, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(89410210, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/89410210" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
  <script>
      function handleClick(e) {
          alert('Спасибо! Ваш голос учтен.');
