--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
             line-height: 1.2;
             margin-bottom: .5em;
         }
+        h3 {
+            margin: 0;
+        }
+        .design .columns.two {
+            grid-template-columns: 3fr 2fr;
+        }
+        ol[type="a"] {
+            list-style: lower-alpha;
+        }
+        ol[type="I"] {
+            list-style: upper-roman;
+        }
+        ol[type="a"] li::before,
+        ol[type="I"] li::before {
+            display: none;
+        }
+        li::marker {
+            color: var(--color-grey);
+        }
     </style>
 </head>
 <body class="shower list">
@@ -33,9 +52,9 @@
 
     <section class="slide" id="cover">
         <h2>GitHub и Метрика</h2>
-        <p>Михаил Воробьев, разработчик интерфейсов Практикума</p>
-        <ol>
-            <li>Макет vs. реальность</li>
+        <p class="note">Михаил Воробьев, разработчик интерфейсов Практикума</p>
+        <ol type="I">
+            <li>Заметки для дизайнера</li>
             <li>Системы контроля версий</li>
             <li>Метрика</li>
             <li>Q&A</li>
@@ -56,82 +75,88 @@
     </section>
 
     <section class="slide" id="design">
-        <h2>Мои заметки для дизайнера</h2>
-        <div class="columns three">
+        <h2 class="place center">I. Заметки для дизайнера</h2>
+    </section>
+
+    <section class="slide design" id="design1">
+        <div class="columns two">
             <div>
                 <h3>Адаптивность</h3>
                 <ul>
-                    <li>Мобильные версии сайтов верстайте в размере 320px</li>
-                    <li>Для элементов, которые тянутся по ширине, продумайте поведение (ограничение) на разных экранах</li>
-                    <li>В неочевидных местах указывайте: элемент фиксирован в размерах или зависит от ширины/высоты экрана; какие минимальные/максимальные размеры?</li>
+                    <li>Мобильные версии сайтов шириной 320px</li>
+                    <li>Для элементов, которые тянутся по ширине, продумайте поведение (ограничение) на разных экранах</li>
+                    <li>В неочевидных местах указывайте: элемент фиксирован в размерах или зависит от ширины/высоты экрана; какие минимальные/максимальные размеры?</li>
                 </ul>
+            </div>
+            <div>
                 <h3>Переполнение</h3>
                 <ul>
-                    <li>Константин Константинопольский</li>
+                    <li>Константин Константино&shy;польский</li>
                     <li>В вебе есть переносы</li>
-                    <li>Если мы нарисовали ряд карточек, и предполагается, что их может быть больше/меньше: как они себя будут вести?</li>
+                    <li>Если мы нарисовали ряд карточек, и предполагается, что их может быть больше/меньше: как они себя будут вести?</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="slide design" id="design2">
+        <div class="columns two">
+            <div>
+                <h3>Цвета</h3>
+                <ul>
+                    <li>Проверяйте контрастность.</li>
+                    <li>Заведите палитру цветов и старайтесь не отступать от неё.</li>
+                    <li>Для удобства создания ховеров и состояний можно использовать HSL.</li>
+                    <li>Не используйте прозрачность, если в этом нет необходимости — пишите конечный цвет.</li>
+                    <li>В какой цвет красить шапку браузера?</li>
                 </ul>
             </div>
             <div>
                 <h3>Текст</h3>
                 <ul>
-                    <li>Заведите текстовые стили и старайтесь не отступать от них.</li>
-                    <li>Как должны выглядеть ссылки в тексте?</li>
-                    <li>Шрифт в инпутах менее 16px</li>
-                </ul>
-                <h3>Цвета</h3>
-                <ul>
-                    <li>Проверяйте контрастность.</li>
-                    <li>Заведите палитру цветов и старайтесь не отступать от неё.</li>
-                    <li>Для удобства создания ховеров и состояний можно использовать HSL.</li>
-                    <li>Не используйте прозрачность, если в этом нет необходимости — пишите конечный цвет.</li>
-                    <li>В какой цвет красить шапку браузера?</li>
+                    <li>Заведите текстовые стили и старайтесь не отступать от них.</li>
+                    <li>Как должны выглядеть ссылки в тексте?</li>
+                    <li>Шрифт в инпутах не менее 16px</li>
                 </ul>
             </div>
+        </div>
+    </section>
+
+    <section class="slide design" id="design3">
+        <div class="columns two">
             <div>
                 <h3>Интерактивность</h3>
                 <ul>
                     <li>Если нужно, продумайте состояния ховеров.</li>
                     <li>Если нужно сделать горизонтальную/вертикальную прокрутку элемента, решите прячем ли мы скроллбар, оформляем ли его по своему, или оставляем стандартный.</li>
                 </ul>
+            </div>
+            <div>
                 <h3>Картинки</h3>
                 <ul>
-                    <li>Фавиконка для сайта — svg или png до 512х512. Можно отдельно для светлой и темной темы.</li>
-                    <li>Обложка для шеринга в соцсетях 1280×640</li>
+                    <li>Фавиконка для сайта — svg или png до 512х512. Можно отдельно для светлой и темной темы.</li>
+                    <li>Обложка для шеринга в соцсетях 1280×640px</li>
                 </ul>
             </div>
         </div>
-        <style>
-            #design h3 {
-                margin: 0;
-            }
-            #design .columns {
-                font-size: .75rem;
-            }
-        </style>
     </section>
 
     <section class="slide" id="vcs">
-        <h2>Системы контроля версий</h2>
-        <p class="note"><a href="https://doka.guide/tools/version-control/" target="_blank">VCS</a> — Version Control Systems</p>
+        <h2>II. Системы контроля версий</h2>
         <p>Придуманы, чтобы следить за историей изменений исходного кода и комфортно работать большой командой. Самая популярная — Git.</p>
+        <p class="note"><a href="https://doka.guide/tools/version-control/" target="_blank">VCS</a> — Version Control Systems</p>
         <p><a href="https://github.com" target="_blank">GitHub</a> • <a href="https://code.visualstudio.com" target="_blank">VS Code</a> • <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a></p>
     </section>
 
     <section class="slide" id="repository">
         <h2>Репозиторий</h2>
-        <p class="note">Repository — хранилище исходного кода с историей изменений</p>
-        <ul>
-            <li><b>Локальный (Local)</b> — размещенный на компьютере разработчика</li>
-            <li><b>Удаленный (Remote)</b> — размещенный на GitHub</li>
-        </ul>
+        <p>Repository — хранилище исходного кода с историей изменений</p>
         <p><code>git init</code> — создать (инициализировать) репозиторий</p>
-        <p><code>git clone ОТКУДА КУДА</code> — скопировать (клонировать) репозиторий на компьютер</p>
     </section>
 
     <section class="slide" id="commit">
         <h2>Коммит</h2>
-        <p class="note">Commit — коротко подписанная пачка изменений исходного кода</p>
+        <p>Commit — коротко подписанная пачка изменений исходного кода</p>
         <p><code>git add ПАПКИ/ФАЙЛЫ</code> — добавить измененённые файлы в следующий коммит (застейджить). Застейджить всё: <code>git add --all</code></p>
         <p><code>git commit -m "СООБЩЕНИЕ"</code> — создать коммит (закоммитить)</p>
         <p><code>git revert КОММИТ</code> — отменить коммит (ревертнуть)</p>
@@ -139,7 +164,7 @@
 
     <section class="slide" id="true-false">
         <h2>💬 Правда или ложь</h2>
-        <p class="note">Ставьте в чат <code>+</code> если согласны с удтверждением или <code>–</code>, если нет</p>
+        <p>Ставьте в чат <code>+</code> если согласны с удтверждением или <code>–</code>, если нет</p>
         <ol>
             <li class="next">Хранилище исходного кода с историей изменений называют суппозиторием</li>
             <li class="next">В сообщении коммита требуется подробно перечислить все изменения</li>
@@ -147,16 +172,44 @@
         </ol>
     </section>
 
+    <section class="slide" id="remote">
+        <p>
+            <span class="emoji">🌐</span>
+            <span><b>Удаленный репозиторий</b> — размещенный на GitHub</span>
+        </p>
+        <p>
+            <span class="emoji">💾</span>
+            <span><code>git clone ОТКУДА КУДА</code> — скопировать (клонировать) удаленный репозиторий на компьютер</span>
+        </p>
+        <p>
+            <span class="emoji">🖥</span>
+            <span><b>Локальный репозиторий</b> — размещенный на компьютере разработчика</span>
+        </p>
+        <style>
+            #remote > p {
+                display: flex;
+                align-items: baseline;
+                font-size: 1.25em;
+            }
+            .emoji {
+                transform: translateY(5%);
+                margin-right: .5em;
+                font-size: 1.25em;
+            }
+        </style>
+    </section>
+
     <section class="slide" id="ci-cd">
         <h2>Работа с удаленным репозиторием</h2>
         <p><code>git push</code> — отправить коммиты (запушить)</p>
         <p><code>git pull</code> — подтянуть коммиты (спуллить)</p>
-        <p><b>Continuous Integration/Continuous Delivery <a href="https://doka.guide/tools/ci-cd/" target="_blank">(CI/CD)</a></b> — подход к разработке, при котором задачи сборки, публикации, тестирования продукта полностью или частично автоматизированы.</p>
+        <hr>
+        <p>Кроме клонирования, и операций push/pull чужой удаленный репозиторий на гитхабе можно <b>форкнуть</b> — создать в своём аккаунте такой же удаленный репозиторий, сохранив связь с оригиналом, но со своей независимой историей.</p>
     </section>
 
     <section class="slide" id="definitions">
         <h2>💬 Сопоставьте действия с командами</h2>
-        <p class="note">и напишите в чат в свободной форме, например <q>1a,2b,3c</q></p>
+        <p>и напишите в чат в свободной форме, например <q>1a,2b,3c</q></p>
         <div class="columns two">
             <ol>
                 <li>Скопировать удаленный репозиторий к себе на компьютер</li>
@@ -170,15 +223,6 @@
             </ol>
         </div>
         <style>
-            #definitions ol[type="a"] {
-                list-style: lower-alpha;
-            }
-            #definitions ol[type="a"] li::before {
-                display: none;
-            }
-            #definitions ol[type="a"] li::marker {
-                color: var(--color-grey);
-            }
             #definitions .two {
                 grid-template-columns: 2fr 1fr;
             }
@@ -211,7 +255,7 @@
     </section>
 
     <section class="slide" id="github-flow">
-        <h2>Возможности веток <a href="https://docs.github.com/en/get-started/quickstart/github-flow" target="_blank">(GitHub flow)</a></h2>
+        <h2>Возможности веток</h2>
         <ul>
             <li>Параллельно работать над новой сложной функциональностью, привязывая ветку к задаче (карточка в Trello, тикет в менеджере задач, Issue на гитхабе)</li>
             <li>Переиспользовать чужие коммиты</li>
@@ -219,19 +263,20 @@
             <li>Опубликовать тестовую версию сайта и проверить функциональность</li>
             <li>Создать <b>Pull Request</b> (запрос на слияние веток) и провести <b>Code Review</b> (проверку чужого кода перед слиянием)</li>
         </ul>
+        <a href="https://doka.guide/tools/ci-cd/" target="_blank">CI/CD</a> • <a href="https://docs.github.com/en/get-started/quickstart/github-flow" target="_blank">GitHub flow</a><br>
         <a href="task/">Задание</a>
     </section>
 
     <section class="slide" id="metrika">
-        <h2><a href="https://metrika.yandex.ru/" target="_blank">Метрика</a></h2>
+        <h2><a href="https://metrika.yandex.ru/" target="_blank">III. Метрика</a></h2>
         <p>Инструмент для оценки посещаемости сайтов и анализа поведения пользователей.</p>
         <p>Можно проверять, добавив к адресу сайта <code>?_ym_debug=1</code> и заглянув в консоль браузера <code>F12</code>/<code>Cmd+Shift+I</code></p>
         <a href="cats/?_ym_debug=1" target="_blank">Котики</a> • <a href="https://metrika.yandex.ru/dashboard?id=89410210" target="_blank">Счётчик котиков</a>
     </section>
 
     <section class="slide" id="qa">
-        <h2 class="shout shrink">Вопросы</h2>
-        <p class="place bottom"><a href="https://t.me/dontliem1" target="_blank">@dontliem1</a></p>
+        <h2 class="shout shrink">IV. Вопросы</h2>
+        <p class="place bottom note">tg: <a href="https://t.me/dontliem1" target="_blank">@dontliem1</a></p>
     </section>
 
     <footer class="badge">
